# global-forecasting

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: example.ipynb
src/global_forecasting/: __init__.py  features.py  forecaster.py  metrics.py  types.py  utils.py
tests/: conftest.py
tests/fixtures/: data_fixtures.py  model_fixtures.py
tests/unit/: test_forecaster.py
