[project]
name = "global-forecasting"
version = "0.1.0"
description = "A library for training global forecasting models on multiple time series"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Giordano Alvari", email = "giordano@example.com" }
]
dependencies = [
    "catboost>=1.2.8",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pytest>=8.4.2",
    "scikit-learn>=1.3.0",
    "typing-extensions>=4.7.0",
    "utilsforecast>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.284",
    "mypy>=1.5.1",
    "pytest-asyncio>=0.21.1",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["global_forecasting"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=global_forecasting --cov-report=term-missing"
testpaths = [
    "tests",
]
